// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Iterable > crossSerialize > scoped > supports Iterables 1`] = `
"($R=>$R[0]={title:"Hello World",[$R[1]=Symbol.iterator]:($R[2]=((symbol) => (sequence) => (index, currentIndex, instance, data) => {
  index = 0;
  instance = {
    [symbol]: () => instance,
    next: () => {
      if (index > sequence.d) {
        return {
          done: true,
          value: void 0
        };
      }
      currentIndex = index++;
      data = sequence.v[currentIndex];
      if (currentIndex === sequence.t) {
        throw data;
      }
      return {
        done: currentIndex === sequence.d,
        value: data
      };
    }
  };
  return instance;
})($R[1]))($R[3]={v:$R[4]=[1,2,3,void 0],t:-1,d:3})})($R["example"])"
`;

exports[`Iterable > crossSerialize > supports Iterables 1`] = `
"($R[0]={title:"Hello World",[$R[1]=Symbol.iterator]:($R[2]=((symbol) => (sequence) => (index, currentIndex, instance, data) => {
  index = 0;
  instance = {
    [symbol]: () => instance,
    next: () => {
      if (index > sequence.d) {
        return {
          done: true,
          value: void 0
        };
      }
      currentIndex = index++;
      data = sequence.v[currentIndex];
      if (currentIndex === sequence.t) {
        throw data;
      }
      return {
        done: currentIndex === sequence.d,
        value: data
      };
    }
  };
  return instance;
})($R[1]))($R[3]={v:$R[4]=[1,2,3,void 0],t:-1,d:3})})"
`;

exports[`Iterable > crossSerializeAsync > scoped > supports Iterables 1`] = `
"($R=>$R[0]=$R[0]=Promise.resolve($R[1]={title:"Hello World",[$R[2]=Symbol.iterator]:($R[3]=((symbol) => (sequence) => (index, currentIndex, instance, data) => {
  index = 0;
  instance = {
    [symbol]: () => instance,
    next: () => {
      if (index > sequence.d) {
        return {
          done: true,
          value: void 0
        };
      }
      currentIndex = index++;
      data = sequence.v[currentIndex];
      if (currentIndex === sequence.t) {
        throw data;
      }
      return {
        done: currentIndex === sequence.d,
        value: data
      };
    }
  };
  return instance;
})($R[2]))($R[4]={v:$R[5]=[1,2,3,void 0],t:-1,d:3})}))($R["example"])"
`;

exports[`Iterable > crossSerializeAsync > supports Iterables 1`] = `
"$R[0]=$R[0]=Promise.resolve($R[1]={title:"Hello World",[$R[2]=Symbol.iterator]:($R[3]=((symbol) => (sequence) => (index, currentIndex, instance, data) => {
  index = 0;
  instance = {
    [symbol]: () => instance,
    next: () => {
      if (index > sequence.d) {
        return {
          done: true,
          value: void 0
        };
      }
      currentIndex = index++;
      data = sequence.v[currentIndex];
      if (currentIndex === sequence.t) {
        throw data;
      }
      return {
        done: currentIndex === sequence.d,
        value: data
      };
    }
  };
  return instance;
})($R[2]))($R[4]={v:$R[5]=[1,2,3,void 0],t:-1,d:3})})"
`;

exports[`Iterable > crossSerializeStream > scoped > supports Iterables 1`] = `
"($R=>$R[0]=($R[2]=(resolver) => {
  resolver.p = new Promise((resolve, reject) => {
    resolver.s = resolve;
    resolver.f = reject;
  });
  return resolver.p;
})($R[1]={p:0,s:0,f:0}))($R["example"])"
`;

exports[`Iterable > crossSerializeStream > scoped > supports Iterables 2`] = `
"($R=>($R[8]=(resolver, data) => {
  resolver.s(data);
  resolver.p.s = 1;
  resolver.p.v = data;
})($R[1],$R[3]={title:"Hello World",[$R[4]=Symbol.iterator]:($R[5]=((symbol) => (sequence) => (index, currentIndex, instance, data) => {
  index = 0;
  instance = {
    [symbol]: () => instance,
    next: () => {
      if (index > sequence.d) {
        return {
          done: true,
          value: void 0
        };
      }
      currentIndex = index++;
      data = sequence.v[currentIndex];
      if (currentIndex === sequence.t) {
        throw data;
      }
      return {
        done: currentIndex === sequence.d,
        value: data
      };
    }
  };
  return instance;
})($R[4]))($R[6]={v:$R[7]=[1,2,3,void 0],t:-1,d:3})}))($R["example"])"
`;

exports[`Iterable > crossSerializeStream > supports Iterables 1`] = `
"$R[0]=($R[2]=(resolver) => {
  resolver.p = new Promise((resolve, reject) => {
    resolver.s = resolve;
    resolver.f = reject;
  });
  return resolver.p;
})($R[1]={p:0,s:0,f:0})"
`;

exports[`Iterable > crossSerializeStream > supports Iterables 2`] = `
"($R[8]=(resolver, data) => {
  resolver.s(data);
  resolver.p.s = 1;
  resolver.p.v = data;
})($R[1],$R[3]={title:"Hello World",[$R[4]=Symbol.iterator]:($R[5]=((symbol) => (sequence) => (index, currentIndex, instance, data) => {
  index = 0;
  instance = {
    [symbol]: () => instance,
    next: () => {
      if (index > sequence.d) {
        return {
          done: true,
          value: void 0
        };
      }
      currentIndex = index++;
      data = sequence.v[currentIndex];
      if (currentIndex === sequence.t) {
        throw data;
      }
      return {
        done: currentIndex === sequence.d,
        value: data
      };
    }
  };
  return instance;
})($R[4]))($R[6]={v:$R[7]=[1,2,3,void 0],t:-1,d:3})})"
`;

exports[`Iterable > serialize > supports Iterables 1`] = `
"((h,j)=>({title:"Hello World",[h=Symbol.iterator]:(((symbol) => (sequence) => (index, currentIndex, instance, data) => {
  index = 0;
  instance = {
    [symbol]: () => instance,
    next: () => {
      if (index > sequence.d) {
        return {
          done: true,
          value: void 0
        };
      }
      currentIndex = index++;
      data = sequence.v[currentIndex];
      if (currentIndex === sequence.t) {
        throw data;
      }
      return {
        done: currentIndex === sequence.d,
        value: data
      };
    }
  };
  return instance;
})(h))({v:[1,2,3,void 0],t:-1,d:3})}))()"
`;

exports[`Iterable > serializeAsync > supports Iterables 1`] = `
"((h,j)=>Promise.resolve({title:"Hello World",[h=Symbol.iterator]:(((symbol) => (sequence) => (index, currentIndex, instance, data) => {
  index = 0;
  instance = {
    [symbol]: () => instance,
    next: () => {
      if (index > sequence.d) {
        return {
          done: true,
          value: void 0
        };
      }
      currentIndex = index++;
      data = sequence.v[currentIndex];
      if (currentIndex === sequence.t) {
        throw data;
      }
      return {
        done: currentIndex === sequence.d,
        value: data
      };
    }
  };
  return instance;
})(h))({v:[1,2,3,void 0],t:-1,d:3})}))()"
`;

exports[`Iterable > toCrossJSON > supports Iterables 1`] = `"{"t":10,"i":0,"p":{"k":["title",{"t":17,"i":1,"s":3}],"v":[{"t":1,"s":"Hello World"},{"t":28,"a":[{"t":27,"i":2,"f":{"t":4,"i":1}},{"t":10,"i":3,"p":{"k":["v","t","d"],"v":[{"t":9,"i":4,"l":4,"a":[{"t":0,"s":1},{"t":0,"s":2},{"t":0,"s":3},{"t":2,"s":1}],"o":0},{"t":0,"s":-1},{"t":0,"s":3}],"s":3},"o":0}]}],"s":2},"o":0}"`;

exports[`Iterable > toCrossJSONAsync > supports Iterables 1`] = `"{"t":12,"i":0,"s":1,"f":{"t":10,"i":1,"p":{"k":["title",{"t":17,"i":2,"s":3}],"v":[{"t":1,"s":"Hello World"},{"t":28,"a":[{"t":27,"i":3,"f":{"t":4,"i":2}},{"t":10,"i":4,"p":{"k":["v","t","d"],"v":[{"t":9,"i":5,"l":4,"a":[{"t":0,"s":1},{"t":0,"s":2},{"t":0,"s":3},{"t":2,"s":1}],"o":0},{"t":0,"s":-1},{"t":0,"s":3}],"s":3},"o":0}]}],"s":2},"o":0}}"`;

exports[`Iterable > toCrossJSONStream > supports Iterables 1`] = `"{"t":22,"i":0,"s":1,"f":{"t":26,"i":2,"s":1}}"`;

exports[`Iterable > toCrossJSONStream > supports Iterables 2`] = `"{"t":23,"i":1,"a":[{"t":26,"i":8,"s":2},{"t":10,"i":3,"p":{"k":["title",{"t":17,"i":4,"s":3}],"v":[{"t":1,"s":"Hello World"},{"t":28,"a":[{"t":27,"i":5,"f":{"t":4,"i":4}},{"t":10,"i":6,"p":{"k":["v","t","d"],"v":[{"t":9,"i":7,"l":4,"a":[{"t":0,"s":1},{"t":0,"s":2},{"t":0,"s":3},{"t":2,"s":1}],"o":0},{"t":0,"s":-1},{"t":0,"s":3}],"s":3},"o":0}]}],"s":2},"o":0}]}"`;

exports[`Iterable > toJSON > supports Iterables 1`] = `"{"t":{"t":10,"i":0,"p":{"k":["title",{"t":17,"i":1,"s":3}],"v":[{"t":1,"s":"Hello World"},{"t":28,"a":[{"t":27,"i":2,"f":{"t":4,"i":1}},{"t":10,"i":3,"p":{"k":["v","t","d"],"v":[{"t":9,"i":4,"l":4,"a":[{"t":0,"s":1},{"t":0,"s":2},{"t":0,"s":3},{"t":2,"s":1}],"o":0},{"t":0,"s":-1},{"t":0,"s":3}],"s":3},"o":0}]}],"s":2},"o":0},"f":31,"m":[1]}"`;

exports[`Iterable > toJSONAsync > supports Iterables 1`] = `"{"t":{"t":12,"i":0,"s":1,"f":{"t":10,"i":1,"p":{"k":["title",{"t":17,"i":2,"s":3}],"v":[{"t":1,"s":"Hello World"},{"t":28,"a":[{"t":27,"i":3,"f":{"t":4,"i":2}},{"t":10,"i":4,"p":{"k":["v","t","d"],"v":[{"t":9,"i":5,"l":4,"a":[{"t":0,"s":1},{"t":0,"s":2},{"t":0,"s":3},{"t":2,"s":1}],"o":0},{"t":0,"s":-1},{"t":0,"s":3}],"s":3},"o":0}]}],"s":2},"o":0}},"f":31,"m":[2]}"`;
